force-app/main/default/objects/Opportunity/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Cooling Technologies (ACT)</fullName>
            </value>
            <value>
                <fullName>Advanced Thermal Hydronics</fullName>
            </value>
            <value>
                <fullName>Advanced Thermal Hydronics (ATH)</fullName>
            </value>
            <value>
                <fullName>Alfa Laval</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Alliance Air Products</fullName>
            </value>
            <value>
                <fullName>American Wheatley</fullName>
            </value>
            <value>
                <fullName>Aquanomix</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Armstrong Humidifiers</fullName>
            </value>
            <value>
                <fullName>AtmosAir</fullName>
            </value>
            <value>
                <fullName>Atmos Air</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Boilers &amp; Heaters - Other</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Camus Hydronics</fullName>
            </value>
            <value>
                <fullName>Cincinnati Fan</fullName>
            </value>
            <value>
                <fullName>Cleaver-Brooks</fullName>
            </value>
            <value>
                <fullName>ClimaCOOL</fullName>
            </value>
            <value>
                <fullName>ClimateCraft</fullName>
            </value>
            <value>
                <fullName>ClimateMaster</fullName>
            </value>
            <value>
                <fullName>Cooling Towers &amp; Parts - Other</fullName>
            </value>
            <value>
                <fullName>Cooney Coil</fullName>
            </value>
            <value>
                <fullName>Danfoss</fullName>
            </value>
            <value>
                <fullName>Desert Aire</fullName>
            </value>
            <value>
                <fullName>Dunham Bush</fullName>
            </value>
            <value>
                <fullName>Duravent</fullName>
            </value>
            <value>
                <fullName>Enervex</fullName>
            </value>
            <value>
                <fullName>Engineered Products</fullName>
            </value>
            <value>
                <fullName>Enviro-tec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>