force-app/main/default/objects/Opportunity/fields/Parts_Needed__c.field-meta.xml
<CustomField>
    <fullName>Parts_Needed__c</fullName>
    <inlineHelpText>What parts do they need? What notes do you have for the job?</inlineHelpText>
    <label>Parts Needed/Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>