force-app/main/default/objects/Opportunity/fields/Payments_Received_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Payments_Received_From_Customer__c</fullName>
    <label>Payments Received From Customer</label>
    <type>Date</type>
</CustomField>