force-app/main/default/objects/Opportunity/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Attention_to__r.Phone</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>