force-app/main/default/objects/Opportunity/fields/PM_Phase_del__c.field-meta.xml
<CustomField>
    <fullName>PM_Phase_del__c</fullName>
    <label>PM Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pre-submittals</fullName>
            </value>
            <value>
                <fullName>All submittals sent – awaiting approval(s)</fullName>
            </value>
            <value>
                <fullName>Submittals approved</fullName>
            </value>
            <value>
                <fullName>Equipment Partially Released</fullName>
            </value>
            <value>
                <fullName>Released all equipment</fullName>
            </value>
            <value>
                <fullName>Partially shipped</fullName>
            </value>
            <value>
                <fullName>Fully shipped</fullName>
            </value>
            <value>
                <fullName>Startup and owner training</fullName>
            </value>
            <value>
                <fullName>Partially invoiced</fullName>
            </value>
            <value>
                <fullName>Fully invoiced</fullName>
            </value>
            <value>
                <fullName>Partially paid</fullName>
            </value>
            <value>
                <fullName>All paid</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Received Customer PO</fullName>
                <isActive>false</isActive>
                <label>Received Customer PO</label>
            </value>
            <value>
                <fullName>Released Equipment</fullName>
                <isActive>false</isActive>
                <label>Released Equipment</label>
            </value>
            <value>
                <fullName>Shipped &amp; Invoiced</fullName>
                <isActive>false</isActive>
                <label>Shipped &amp; Invoiced</label>
            </value>
            <value>
                <fullName>Startup/Owner Training</fullName>
                <isActive>false</isActive>
                <label>Startup/Owner Training</label>
            </value>
            <value>
                <fullName>Submitted – waiting for approval</fullName>
                <isActive>false</isActive>
                <label>Submitted – waiting for approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>