force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <inlineHelpText>Does this job have a customer supplied PO Number?</inlineHelpText>
    <label>PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>