force-app/main/default/objects/Opportunity/fields/PO_Total__c.field-meta.xml
<CustomField>
    <fullName>PO_Total__c</fullName>
    <label>PO Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>