force-app/main/default/objects/Opportunity/fields/Potential_Impact__c.field-meta.xml
<CustomField>
    <fullName>Potential_Impact__c</fullName>
    <formula>Total_Project_Margin__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>