force-app/main/default/objects/Opportunity/fields/Preferred_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Quote_Date__c</fullName>
    <inlineHelpText>When do they need a quote by?</inlineHelpText>
    <label>Preferred Quote Date</label>
    <type>Date</type>
</CustomField>