force-app/main/default/objects/Opportunity/fields/Preferred_Service_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Service_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Do they have a preferred service contractor?</inlineHelpText>
    <label>Preferred Service Contractor (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Preferred Service Contractor)</relationshipLabel>
    <relationshipName>OpportunitiesO13M</relationshipName>
    <type>Lookup</type>
</CustomField>