force-app/main/default/objects/Opportunity/fields/Quote_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Quote_Prepared_By__c</fullName>
    <formula>Sync_Quote__r.prepared_by_user__r.FirstName + &apos; &apos; +  Sync_Quote__r.prepared_by_user__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Prepared By</label>
    <type>Text</type>
</CustomField>