force-app/main/default/objects/Opportunity/fields/Receipt_of_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_of_Order_Date__c</fullName>
    <inlineHelpText>What day did you receive the order? This is for reporting purposes.</inlineHelpText>
    <label>Receipt of Order Date</label>
    <type>Date</type>
</CustomField>