force-app/main/default/objects/Opportunity/fields/Received_P_O__c.field-meta.xml
<CustomField>
    <fullName>Received_P_O__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received P.O.</label>
    <type>Checkbox</type>
</CustomField>