force-app/main/default/objects/Opportunity/fields/Revenue_Buy_Resell__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Buy_Resell__c</fullName>
    <description>From Project financials tab fields -BACKLOG(BOOKED NOT INVOICED)
REVENUE-BUY/RESELL</description>
    <formula>Active_Financial_Quote__r.Total_Buy_Resell_Price__c - IF(ISBLANK(B_R_BillingLine_Total__c), 0, B_R_BillingLine_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Total_Buy_Resell_Price__c - B_R_BillingLine_Total__c</inlineHelpText>
    <label>REVENUE-BUY/RESELL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>