force-app/main/default/objects/Opportunity/fields/Review_Statement_of_Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Statement_of_Compliance_Notes__c</fullName>
    <description>Review Statement of Compliance from SE 2/Comments?</description>
    <label>Review Statement of Compliance Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>