force-app/main/default/objects/Opportunity/fields/SalesSplitCommision__c.field-meta.xml
<CustomField>
    <fullName>SalesSplitCommision__c</fullName>
    <label>Sales Split Commision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>