force-app/main/default/objects/Opportunity/fields/SalesSplitUser__c.field-meta.xml
<CustomField>
    <fullName>SalesSplitUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Split User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>