force-app/main/default/objects/Opportunity/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>2nd Day</fullName>
            </value>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>Specialized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>