force-app/main/default/objects/Opportunity/fields/SharePoint_Opportunity_Folder__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Opportunity_Folder__c</fullName>
    <formula>HYPERLINK(&quot;/apex/SharePoint_Intermidiate?id=&quot;+Id, IMAGE(&quot;/resource/Button_Sharepoint_Folder&quot;, &quot;Open Sharepoint Folder&quot;, 30, 110),&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SharePoint Opportunity Folder</label>
    <type>Text</type>
</CustomField>