force-app/main/default/objects/Opportunity/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <inlineHelpText>When do you estimate the equipment will ship?</inlineHelpText>
    <label>Estimated Ship Date</label>
    <type>Date</type>
</CustomField>