force-app/main/default/objects/Opportunity/fields/Shipment_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Lead_Time__c</fullName>
    <inlineHelpText>What is the lead time after purchaser&apos;s release?</inlineHelpText>
    <label>Shipment Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>3-5 Business Days</fullName>
            </value>
            <value>
                <fullName>5-10 Business Days</fullName>
            </value>
            <value>
                <fullName>1-2 Weeks</fullName>
            </value>
            <value>
                <fullName>2-3 Weeks</fullName>
            </value>
            <value>
                <fullName>3-4 Weeks</fullName>
            </value>
            <value>
                <fullName>4-6 Weeks</fullName>
            </value>
            <value>
                <fullName>6-10 Weeks</fullName>
            </value>
            <value>
                <fullName>10-12 Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>