force-app/main/default/objects/Opportunity/fields/Shipment_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Tracking_Number__c</fullName>
    <inlineHelpText>What is the tracking number for this order?</inlineHelpText>
    <label>Shipment Tracking Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>