force-app/main/default/objects/Opportunity/fields/Shipping_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Number__c</fullName>
    <inlineHelpText>What is the account number for collect?</inlineHelpText>
    <label>Shipping Account Number</label>
    <length>49</length>
    <type>Text</type>
</CustomField>