force-app/main/default/objects/Opportunity/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <inlineHelpText>What is the shipping charge situation?</inlineHelpText>
    <label>Shipping Charges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freight to be added to invoice.</fullName>
            </value>
            <value>
                <fullName>Standard Freight Allowed.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>