force-app/main/default/objects/Opportunity/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <label>Shipping Name</label>
    <type>TextArea</type>
</CustomField>