force-app/main/default/objects/Opportunity/fields/Show_Commision__c.field-meta.xml
<CustomField>
    <fullName>Show_Commision__c</fullName>
    <formula>Project__r.Show_Commission_Table__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Commision</label>
    <type>Checkbox</type>
</CustomField>