force-app/main/default/objects/Opportunity/fields/Site_Details__c.field-meta.xml
<CustomField>
    <fullName>Site_Details__c</fullName>
    <inlineHelpText>Describe the site.</inlineHelpText>
    <label>Site Details</label>
    <type>TextArea</type>
</CustomField>