force-app/main/default/objects/Opportunity/fields/Special_Drawing_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Drawing_Requirements_Notes__c</fullName>
    <description>Special Drawing Requirements?</description>
    <label>Special Drawing Requirements Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>