force-app/main/default/objects/Opportunity/fields/Special_pricing_approval_documentation_n__c.field-meta.xml
<CustomField>
    <fullName>Special_pricing_approval_documentation_n__c</fullName>
    <description>Special pricing approval documentation needed?</description>
    <label>Special pricing approval documentation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>