force-app/main/default/objects/Opportunity/fields/Special_Shipping_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipping_Requirements_Notes__c</fullName>
    <description>Special Shipping Requirements?</description>
    <label>Special Shipping Requirements Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>