force-app/main/default/objects/Opportunity/fields/Special_Submittal_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Submittal_Requirements__c</fullName>
    <description>Special Submittal Requirements?</description>
    <label>Special Submittal Requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>