force-app/main/default/objects/Opportunity/fields/Special_Submittal_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Submittal_Requirements_Notes__c</fullName>
    <description>Special Submittal Requirements?</description>
    <label>Special Submittal Requirements Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>