force-app/main/default/objects/Opportunity/fields/State_material_2__c.field-meta.xml
<CustomField>
    <fullName>State_material_2__c</fullName>
    <label>State</label>
    <length>70</length>
    <type>Text</type>
</CustomField>