force-app/main/default/objects/Opportunity/fields/Street_material_3__c.field-meta.xml
<CustomField>
    <fullName>Street_material_3__c</fullName>
    <label>Street</label>
    <length>70</length>
    <type>Text</type>
</CustomField>