force-app/main/default/objects/Opportunity/fields/Submittal_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Approval_Received__c</fullName>
    <label>Submittal Approval Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>