force-app/main/default/objects/Opportunity/fields/Sync_Quote__c.field-meta.xml
<CustomField>
    <fullName>Sync_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>