force-app/main/default/objects/Opportunity/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <inlineHelpText>Add a &quot;tag&quot; or &quot;attention to&quot; for the shipping address if required.</inlineHelpText>
    <label>Tag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>