force-app/main/default/objects/Opportunity/fields/Targeted__c.field-meta.xml
<CustomField>
    <fullName>Targeted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to flag the opportunity so it stays on your &quot;radar&quot; at all times regardless of stage.</inlineHelpText>
    <label>Targeted</label>
    <type>Checkbox</type>
</CustomField>