force-app/main/default/objects/Opportunity/fields/Tax_status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tax_status_Notes__c</fullName>
    <description>Tax status?</description>
    <label>Tax status Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>