force-app/main/default/objects/Opportunity/fields/Thank_you_Letter_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_Letter_Sent_to_Customer__c</fullName>
    <description>Thank you Letter Sent to Customer?</description>
    <label>Thank you Letter Sent to Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>