force-app/main/default/objects/Opportunity/fields/Total_Base_Bid_Total_Quote__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Bid_Total_Quote__c</fullName>
    <inlineHelpText>This is the total base bid for the quote currently synced with this opportunity.</inlineHelpText>
    <label>Base Bid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>