force-app/main/default/objects/Opportunity/fields/Total_Extended_Cost_Quote__c.field-meta.xml
<CustomField>
    <fullName>Total_Extended_Cost_Quote__c</fullName>
    <label>Total Extended Cost (Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>