force-app/main/default/objects/Opportunity/fields/Total_Margin_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Backlog__c</fullName>
    <description>From Project financials tab BACKLOG(BOOKED NOT INVOICED)
TOTAL BACKLOG-MARGIN</description>
    <formula>Active_Financial_Quote__r.Commissions_and_Rebates__c - 
IF(OR(C_R_BillingLine_Total__c = 0,ISBLANK(C_R_BillingLine_Total__c)),0, C_R_BillingLine_Total__c) 
+
IF(OR(Active_Financial_Quote__r.Total_Buy_Resell_Price__c = 0,
ISBLANK(Active_Financial_Quote__r.Total_Buy_Resell_Price__c)),0,
 Active_Financial_Quote__r.Total_Buy_Resell_Margin__c / Active_Financial_Quote__r.Total_Buy_Resell_Price__c) 
* (Active_Financial_Quote__r.Total_Buy_Resell_Price__c - 
IF(ISBLANK(B_R_BillingLine_Total__c), 0, B_R_BillingLine_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>( Active_Financial_Quote__r.Commissions_and_Rebates__c - C_R_BillingLine_Total__c)  
+
((Active_Financial_Quote__r.Total_Buy_Resell_Margin__c/Active_Financial_Quote__r.Total_Buy_Resell_Price__c) * (Active_Financial_Quote__r.Total_Buy_Resell_Price__c - B_R_BillingLine_Total__c))</inlineHelpText>
    <label>TOTAL BACKLOG-MARGIN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>