force-app/main/default/objects/Opportunity/fields/TotalBuyResellSales__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyResellSales__c</fullName>
    <description>From project financials tab SALES(BUY/RESELL)
BUY/RESELL
And Even it is used for calculating (Total Buy Resell Sales ) for Sales Result-DB</description>
    <formula>IF(ISBLANK( Active_Financial_Quote__r.Total_Buy_Resell_Price__c ) , 0 , Active_Financial_Quote__r.Total_Buy_Resell_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Total_Buy_Resell_Price__c</inlineHelpText>
    <label>SALES-BUY/RESELL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>