force-app/main/default/objects/Opportunity/fields/TotalDirectSales__c.field-meta.xml
<CustomField>
    <fullName>TotalDirectSales__c</fullName>
    <description>From project financials tab SALES (DIRECT)
DIRECT
And Even it is used for calculating (Total Direct Sales ) for Sales Result-DB</description>
    <formula>IF(ISBLANK( Active_Financial_Quote__r.Total_Direct_Sell_Price__c ) , 0 , Active_Financial_Quote__r.Total_Direct_Sell_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Total_Direct_Sell_Price__c</inlineHelpText>
    <label>SALES-DIRECT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>