force-app/main/default/objects/Opportunity/fields/TotalSalesBooked__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesBooked__c</fullName>
    <description>From project financials tab SALES(TOTAL BOOKINGS)
TOTAL BOOKINGS
And Even it is used for calculating (Total Sales (Booked) ) for Sales Result-DB</description>
    <formula>IF(ISBLANK(Active_Financial_Quote__r.Total_Direct_Sell_Price__c), 0, Active_Financial_Quote__r.Total_Direct_Sell_Price__c) +  
IF(ISBLANK( Active_Financial_Quote__r.Total_Buy_Resell_Price__c ), 0, Active_Financial_Quote__r.Total_Buy_Resell_Price__c)</formula>
    <inlineHelpText>Active_Financial_Quote__r.Total_Direct_Sell_Price__c  + Active_Financial_Quote__r.Total_Buy_Resell_Price__c</inlineHelpText>
    <label>SALES-TOTAL BOOKINGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>