force-app/main/default/objects/Opportunity/fields/Tower_Location__c.field-meta.xml
<CustomField>
    <fullName>Tower_Location__c</fullName>
    <inlineHelpText>Where is the tower located? (If Applicable)</inlineHelpText>
    <label>Tower Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grade</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>