force-app/main/default/objects/Opportunity/fields/Tower_Model__c.field-meta.xml
<CustomField>
    <fullName>Tower_Model__c</fullName>
    <inlineHelpText>If this is a Cooling Tower order, enter the tower model number. If this a different product, enter alternate model.</inlineHelpText>
    <label>Equipment Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>