force-app/main/default/objects/Opportunity/fields/Unloading__c.field-meta.xml
<CustomField>
    <fullName>Unloading__c</fullName>
    <label>Unloading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>